<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eceff0"
    android:id="@+id/detailsActivity"
    tools:context=".ui.neighbour_list.DetailsNeighbourActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/neighbour_picture"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:id="@+id/imageBack"
        android:layout_margin="15dp"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/firstnameBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginStart="10dp"
        android:text="@string/firstnamebig"
        android:textSize="40sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"/>


    <android.support.v7.widget.CardView
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_shape"
        app:cardElevation="4dp"

        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/firstname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/addressImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/address_icon" />
        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="60dp"
            android:layout_marginStart="50dp"
            />

        <ImageView
            android:id="@+id/phoneImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/phone_icon" />
        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            />

        <ImageView
            android:id="@+id/webImage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="140dp"
            android:contentDescription="@string/web_icon" />
        <TextView
            android:id="@+id/webText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_address"
            android:layout_marginTop="140dp"
            android:layout_marginStart="50dp"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_shape"

        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/frame1"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/a_propos_de_moi"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>


        <TextView
            android:id="@+id/aboutlong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutlong"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            />
    </android.support.v7.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@id/frame2"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/none" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="225dp"
        android:src="@drawable/ic_star_grey"
        app:fabCustomSize="60dp"
        app:borderWidth="0dp"
        app:elevation="8dp"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
         />

</android.support.constraint.ConstraintLayout>
</ScrollView>